--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1360,3 +1360,19 @@ h2 {
   padding-top: 0px;
 
 }
+
+.kontenMenu {
+  background: rgb(0,0,0,0.3);
+  border-radius: 20px 20px 0px 0px;
+  color: white;
+  font-weight: bold;
+  font-size: 20PX;
+  /* min-height: 100px; */
+  /* position: absolute; */
+  /* width: -webkit-fill-available; */
+  bottom: 0px;
+}
+
+.itemSub a {
+  padding-left: 36px;
+}
