--- a/src/css/app.css
+++ b/src/css/app.css
@@ -658,7 +658,7 @@ body {
 }
 
 .merahAtas {
-  min-height: 180px;
+  min-height: 300px;
   background-attachment: fixed;
   /* background-image: linear-gradient(to top, #f43b47 0%, #a30606 100%); */
   /* margin-top: -70px; */
@@ -709,7 +709,7 @@ body {
 
 .cardAtas {
   /* margin-top:-52px; */
-  margin-top:-245px;
+  margin-top:-365px;
   border-radius: 20px;
 }
 
@@ -1446,7 +1446,7 @@ h2 {
 
 @media only screen and (max-width: 500px) {
   .boxProduk {
-    width: 45%;
+    /* width: 45%; */
     margin:8px;
   }
 }
@@ -1534,5 +1534,9 @@ h2 {
 
 .isiKanban {
   padding: 8px;
+}
+
+.page {
+  background: white;
 }
 
