--- a/src/css/app.css
+++ b/src/css/app.css
@@ -658,7 +658,8 @@ body {
 }
 
 .merahAtas {
-  min-height: 150px;
+  /* min-height: 150px; */
+  min-height: 0px;
   background-attachment: fixed;
   /* background-image: linear-gradient(to top, #f43b47 0%, #a30606 100%); */
   /* margin-top: -70px; */
@@ -709,7 +710,8 @@ body {
 
 .cardAtas {
   /* margin-top:-52px; */
-  margin-top:-220px;
+  /* margin-top:-220px; */
+  margin-top:-70px;
   border-radius: 20px;
 }
 
@@ -1551,5 +1553,9 @@ h2 {
 
 .halamanStoreToko .page-content{
   padding-bottom: 0px;
+}
+
+.list input[type="datetime-local"] {
+  max-width: 100vw;
 }
 
