--- a/src/css/app.css
+++ b/src/css/app.css
@@ -688,6 +688,12 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   padding-top: 80px !important;
+
+  background-image: url('/static/icons/mons_80.png');
+  background-image: url('/static/icons/mons_80.png'), linear-gradient(45deg, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 100%);
+  /* background-image: url('/static/icons/mons_80.png'), linear-gradient(120deg, #f093fb 0%, #f5576c 100%); */
+  /* background-image: url('/static/icons/mons_80.png'), linear-gradient(to bottom, #1d976c, #93f9b9); */
+  background-attachment: fixed;
   
   padding:16px;
   padding-top: 32px; 
@@ -1331,6 +1337,12 @@ h2 {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+
+  background-image: url('/static/icons/mons_80.png');
+  background-image: url('/static/icons/mons_80.png'), linear-gradient(45deg, #fcc5e4 0%, #fda34b 15%, #ff7882 35%, #c8699e 52%, #7046aa 100%);
+  /* background-image: url('/static/icons/mons_80.png'), linear-gradient(120deg, #f093fb 0%, #f5576c 100%); */
+  /* background-image: url('/static/icons/mons_80.png'), linear-gradient(to bottom, #1d976c, #93f9b9); */
+  background-attachment: fixed;
   /* background:transparent;
   /* background: white; */
 }
@@ -1557,5 +1569,9 @@ h2 {
 
 .list input[type="datetime-local"] {
   max-width: 100vw;
+}
+
+.navbarStore {
+  background: transparent;
 }
 
